--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
- 
   "dependencies": {
     "@types/fs-extra": "^11.0.1",
     "@types/node": "^18.11.18",
+    "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
     "fs-extra": "^11.1.0",
     "solc": "0.8.7-fixed",
